[tool.poetry]
name = "Lucky 7 API"
version = "0.1.0"
description = ""
authors = ["Ehsan Nouri <ehsanouri@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
aiohttp = "^3.9.3"
fastapi-pagination = "^0.12.15"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["dotenv"], version = "*"}
loguru = "^0.7.2"
python-multipart = "^0.0.9"
asyncpg = "^0.29.0"
dependency-injector = "^4.41.0"
aiogram = "^3.4.1"
uvicorn = "^0.29.0"
websockets = "^12.0"
redis-om = "^0.2.2"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
aioresponses = "^0.7.6"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
