[project]
name = "l7-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.2",
    "alembic>=1.13.3",
    "sqlalchemy>=2.0.35",
    "aiohttp>=3.10.10",
    "fastapi-pagination>=0.12.31",
    "pydantic-settings>=2.5.2",
    "loguru>=0.7.2",
    "python-multipart>=0.0.12",
    "asyncpg>=0.29.0",
    "dependency-injector>=4.42.0",
    "aiogram>=3.13.1",
    "websockets>=13.1",
    "redis-om>=0.3.2",
    "greenlet>=3.1.1",
    "pyjwt>=2.9.0",
    "uvicorn>=0.31.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "aioresponses>=0.7.6",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.1",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.20.0",
]
